<resources>
    <string name="Acknowledgement_summary">Thanks to all contributors for translation</string>
    <string name="Acknowledgement_title">Acknowledgement</string>
    <string name="Action">Action</string>
    <string name="AdCoinFree">The no-ads mode is enabled.</string>
    <string name="Adventure">Adventure</string>
    <string name="ApplyNewSetting">Applying new settings</string>
    <string name="Arcade">Arcade</string>
    <string name="Board">Board</string>
    <string name="BootEmuFail">Emulator boot failed</string>
    <string name="BootGameNeedCoin">Startup the game will consume coins </string>
    <string name="BootingGame">Starting game</string>
    <string name="BuyFeatureDialog_BuyPro_1">Congratulations on unlocking all the paid advanced features of the %s.</string>
    <string name="BuyFeatureDialog_BuyPro_2">Please remember your login account. After logging in with your ID, you can unlock all paid premium privilege features for any version of the %s emulator , including the upgraded version of this emulator in the future. There will never be no any extra charges for upgrading the new version.</string>
    <string name="BuyFeatureDialog_BuyPro_3">An account can support up to 2 device logins. If you want to sign in to your account on your new phone, please after sign out of your account on your old device, sign in to your ID on the new device.</string>
    <string name="BuyFeatureDialog_RecommendPro_content">Purchase the professional version to unlock all features permanently, and to permanently removed ads displaying, and to lifetime free upgrade.</string>
    <string name="BuyFeatureDialog_RecommendPro_title">Professional Edition recommended</string>
    <string name="BuyFeatureDialog_UnlockNext_content_savefile10">Save state slots has been increased from 2 to 4. Do you want to continue to increase it from 4 to 10?</string>
    <string name="BuyFeatureDialog_UnlockNext_title">Continue to unlock next feature</string>
    <string name="BuyFeatureDialog_UpgradePro_content0">Upgrade to the professional version to unlock all advanced features and NO ADs forever.</string>
    <string name="BuyFeatureDialog_UpgradePro_content1">Original price</string>
    <string name="BuyFeatureDialog_UpgradePro_content2">Now you only need to pay</string>
    <string name="BuyFeatureDialog_UpgradePro_title">Upgrade to the Pro version</string>
    <string name="BuyFeatureDialog_content_common">Purchase this feature, or purchase the professional version to unlock all features.</string>
    <string name="BuyFeatureDialog_content_delete">"Deleting content is a paid feature. It can delete the game's recent history, ROM file, and save states."</string>
    <string name="BuyFeatureDialog_content_gamepad">Enabling GamePad is a paid feature. Please pay to unlock this feature.</string>
    <string name="BuyFeatureDialog_content_pro">Purchase the professional version to unlock all features permanently, and to permanently removed ads displaying, and to lifetime free upgrade.</string>
    <string name="BuyFeatureDialog_content_savefile10">Increase save state slots from 4 to 10.</string>
    <string name="BuyFeatureDialog_content_savefile4">Increase save state slots from 2 to 4.</string>
    <string name="BuyFeatureDialog_title">Unlock paid feature</string>
    <string name="CAG">Card</string>
    <string name="Coin_Count">Coins</string>
    <string name="Compilation">Compilation</string>
    <string name="ConvertDialog_content">Please do not close this window to avoid occurre unrecoverable data error.(For example, the game progress files lost, the APP crash frequently, etc.)</string>
    <string name="ConvertDialog_content_finish">Upgrading data is finished. You can close this window safely now.</string>
    <string name="ConvertDialog_done">Finished</string>
    <string name="ConvertDialog_title">Upgrading data</string>
    <string name="ConvertDialog_wait">Processing</string>
    <string name="PrefKey_AspectRatio">AspectRatio_v0</string>
    <string name="PrefKey_EEClampMode">EEClampMode_v0</string>
    <string name="PrefKey_EECycleRate">EECycleRate_v0</string>
    <string name="PrefKey_EERoundMode">EERoundMode_v0</string>
    <string name="PrefKey_GSDrawBatch">GSDrawBatch_v1</string>
    <string name="PrefKey_GSPassBatch">GSPassBatch_v0</string>
    <string name="PrefKey_GSSkipDAT">GSSkipDAT_v0</string>
    <string name="PrefKey_GSSkipDraw">GSSkipDraw_v0</string>
    <string name="PrefKey_GSSkipDrawDisable">GSSkipDrawDisable_v0</string>
    <string name="PrefKey_GSSkipLTL">GSSkipLTL_v0</string>
    <string name="PrefKey_GSUpScale">GSUpScale_v1</string>
    <string name="PrefKey_TryFixGhost">TryFixGhost_v0</string>
    <string name="PrefKey_TryFixVerticalLine">TryFixVerticalLine_v0</string>
    <string name="PrefKey_VUClampMode">VUClampMode_v0</string>
    <string name="PrefKey_VUCycleSteal">VUCycleSteal_v0</string>
    <string name="PrefKey_VURoundMode">VURoundMode_v0</string>
    <string name="PrefKey_fastBoot">fastBoot_v0</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="buildTime">202303061803</string>
    <string name="buildhost">LAPTOP-SIYUAN/192.168.56.1_LAPTOP-SIYUAN</string>
    <string name="camerapermission">Camera (camera permission)</string>
    <string name="camerapermissiontext">In order to allow the APP to call the camera to scan the QR code of the online game shared by friends to import game information, or take a photo to change the account avatar. If you refuse to authorize, you may not be able to use the aforementioned functions normally.</string>
    <string name="locationpermission">Location permission</string>
    <string name="locationpermissiontext">"By obtaining location information, it provides developers with anti-fraud functions and eliminates fraudulent devices; at the same time, it corrects users' geographical distribution data to make report data more accurate.This permission is optional, if you refuse it, it will not affect the use of this APP."</string>
    <string name="notification_permission">Notification</string>
    <string name="notification_permission_text">If you want to receive notification messages from this APP, you need to authorize us to use the notification permission.</string>
    <string name="phonepermission">Permission to access device information (phone permission)</string>
    <string name="phonepermissiontext">In order for us to smoothly send free game currency to your account, we need the following permissions so that we can read the hardware serial number of the current smartphone to confirm your user ID and receive free Game currency. (Note: We will not access your phone book, make calls or send and receive text messages during this process)</string>
    <string name="pref_about_buildtime">Build time</string>
    <string name="pref_about_company">南京游萌互联网科技有限公司</string>
    <string name="pref_about_copyright">©Copyright 2020-2028. All Rights Reserved</string>
    <string name="pref_about_email">Email</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_audio_disableeffect">Disable reverb effects</string>
    <string name="pref_audio_disableeffect_summary">Skips reverb effects processing, but may break some games (speedup)</string>
    <string name="pref_audio_mute">Mute</string>
    <string name="pref_audio_mute_summary">Turn off sound (speedup)</string>
    <string name="pref_audio_synchmode">Synchronizing Mode</string>
    <string name="pref_controls_ComboKey1">Combo key 1</string>
    <string name="pref_controls_ComboKey2">Combo key 2</string>
    <string name="pref_controls_ComboKey3">Combo key 3</string>
    <string name="pref_controls_ComboKey4">Combo key 4</string>
    <string name="pref_controls_ComboKeySetup">Combo key setup</string>
    <string name="pref_controls_TwoPlayersMode">Two players mode</string>
    <string name="pref_controls_bind_rjoystick">Touch Bind To Right JoyStick</string>
    <string name="pref_controls_bind_sensitivity_x">Swipe Gesture Horizontal Sensitivity</string>
    <string name="pref_controls_bind_sensitivity_y">Swipe Gesture Vertical Sensitivity</string>
    <string name="pref_controls_gamepadInput">Gamepad input</string>
    <string name="pref_controls_gamepadSupportTip">Only support Android-standard (also called HID-standard) gamepads. Other gamepads like XBOX, PS3/PS4 gamepads are not supported yet.</string>
    <string name="pref_controls_touchcontrols">On-screen touch controls</string>
    <string name="pref_controls_vibrate">Vibrate</string>
    <string name="pref_graphics_GSDrawBatch">[RQC] Render queue cache</string>
    <string name="pref_graphics_GSPassBatch">Faster graphic rendering effects</string>
    <string name="pref_graphics_GSSkipDAT">Faster “Alpha Test”</string>
    <string name="pref_graphics_GSSkipDraw">[RSI] Render Sync Interval</string>
    <string name="pref_graphics_GSSkipDrawDisable">[DRS] Disable Rendering Sync</string>
    <string name="pref_graphics_GSSkipLTL">Faster processing “Rendering-to-Texture”</string>
    <string name="pref_graphics_aspectratio">Aspect ratio</string>
    <string name="pref_graphics_experimental">Advanced Settings</string>
    <string name="pref_graphics_renderresolution">Rendering resolution</string>
    <string name="pref_graphics_showDevice">Show device information</string>
    <string name="pref_graphics_showfps">Show FPS</string>
    <string name="pref_graphics_tryFixGhost">Fix duplicated ghosting</string>
    <string name="pref_graphics_tryFixVerticalLine">Fix vertical line</string>
    <string name="pref_header_audio">Audio</string>
    <string name="pref_header_controls">Controls</string>
    <string name="pref_header_developer">Developer</string>
    <string name="pref_header_graphics">Graphics</string>
    <string name="pref_header_system">System</string>
    <string name="pref_system_DeleteContent">Delete game content</string>
    <string name="pref_system_DeleteContent_summary">"Delete the game's recent history, ROM file, and save states."</string>
    <string name="pref_system_EEClampMode">EE Clamp Mode</string>
    <string name="pref_system_EECycleRate">EE Overclock</string>
    <string name="pref_system_EERoundMode">EE Round Mode</string>
    <string name="pref_system_MemoryCardSave">Memory card save</string>
    <string name="pref_system_SaveStateSlots">Save state slots</string>
    <string name="pref_system_VUClampMode">VU Clamp Mode</string>
    <string name="pref_system_VUCycleSteal">VU Overclock</string>
    <string name="pref_system_VURoundMode">VU Round Mode</string>
    <string name="pref_system_fastboot">Skip BIOS</string>
    <string name="pref_user_define_button">Customize Virtual Buttons</string>
    <string name="privacy_statement">Privacy statement</string>
    <string name="scale_portrait_tip">The configuration in the LANDSCAPE(PORTRAIT) screen state corresponds to the LANDSCAPE(PORTRAIT) screen state of the game.</string>
    <string name="storagepermission">Read/Write external storage (permission to access storage device)</string>
    <string name="storagepermissiontext">In order for the APP to correctly read the game ROM from the flash memory of the smartphone, if you choose to change the account avatar, read and save the game QR code from the mobile phone storage or photo album and share the network disk game to the mobile phone , you need to give us permission to use photos or read/write to external storage. If you refuse to authorize, you may not be able to use the aforementioned functions normally.</string>
    <string name="tab_name_browse">Browse</string>
    <string name="tabname_PlayDrive">PlayDrive</string>
    <string name="tabname_compatible">Hot Videos</string>
    <string name="tabname_mine">Me</string>
    <string name="tabname_recent">Mine</string>
    <string name="virtual_control">Virtual Touch Control</string>
</resources>